# fool_algorithm

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  base64.cpp
src/include/: base64.h
test/: CMakeLists.txt  test.cpp
